--- a/packages/theme-default/src/components/SidebarMenu/index.scss
+++ b/packages/theme-default/src/components/SidebarMenu/index.scss
@@ -49,6 +49,10 @@
   .rspress-sidebar-menu > button:first-child {
     display: none;
   }
+
+  .rspress-sidebar-menu-container.no-toc {
+    display: none;
+  }
 }
 
 .rspress-local-toc-container {
