refactor: change `setup` into `useSetup` hook for reactive `scrollPaddingTop`
related https://github.com/web-infra-dev/rspress/issues/1540\#issuecomment-2765136979

--- a/packages/theme-default/src/components/SidebarMenu/index.scss
+++ b/packages/theme-default/src/components/SidebarMenu/index.scss
@@ -53,6 +53,10 @@
   .rspress-sidebar-menu-container.no-toc {
     display: none;
   }
+
+  html:root:has(.rspress-sidebar-menu-container.no-toc) {
+    --rp-sidebar-menu-height: 0px;
+  }
 }
 
 .rspress-local-toc-container {
