--- a/packages/theme-default/src/styles/vars.css
+++ b/packages/theme-default/src/styles/vars.css
@@ -4,9 +4,22 @@
 :root {
   --rp-nav-height: 72px;
   --rp-sidebar-width: 320px;
+  --rp-sidebar-menu-height: 46px;
   --rp-aside-width: 268px;
   --rp-content-padding-x: 24px;
   --rp-content-padding-y: 48px;
+}
+
+@media (max-width: 768px) {
+  html:root {
+    --rp-nav-height: 56px;
+  }
+}
+
+@media (min-width: 1280px) {
+  html:root {
+    --rp-sidebar-menu-height: 0px;
+  }
 }
 
 :root {
