--- a/packages/plugin-preview/static/global-styles/entry.css
+++ b/packages/plugin-preview/static/global-styles/entry.css
@@ -11,7 +11,19 @@
 
 body {
   background-color: var(--rp-iframe-bg) !important;
+  margin: 0px; /* copied from preflight.css */
 }
+
+/* #region copied from preflight.css */
+*,
+::before,
+::after {
+  box-sizing: border-box; /* 1 */
+  border-width: 0; /* 2 */
+  border-style: solid; /* 2 */
+  border-color: theme('borderColor.DEFAULT', currentColor); /* 2 */
+}
+/* #endregion copied from preflight.css */
 
 .preview-nav {
   position: relative;
