--- a/packages/plugin-preview/static/global-styles/entry.css
+++ b/packages/plugin-preview/static/global-styles/entry.css
@@ -1,12 +1,29 @@
-@import url(@rspress/theme-default/bundle.css);
-
 :root {
-  --rp-iframe-bg: var(--rp-code-block-bg);
+  --rp-iframe-bg: #f6f8fa;
+  --rp-iframe-nav-bg: #ffffff;
 }
+
+/* TODO: support dark mode */
+/* .dark {
+  --rp-iframe-bg: #242424;
+  --rp-iframe-nav-bg: #191d24;
+} */
 
 body {
-  background-color: var(--rp-iframe-bg);
+  background-color: var(--rp-iframe-bg) !important;
+  margin: 0px; /* copied from preflight.css */
 }
+
+/* #region copied from preflight.css */
+*,
+::before,
+::after {
+  box-sizing: border-box; /* 1 */
+  border-width: 0; /* 2 */
+  border-style: solid; /* 2 */
+  border-color: theme('borderColor.DEFAULT', currentColor); /* 2 */
+}
+/* #endregion copied from preflight.css */
 
 .preview-nav {
   position: relative;
@@ -14,7 +31,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 56px;
-  background-color: var(--rp-c-bg);
+  background-color: var(--rp-iframe-nav-bg) !important;
   font-weight: 600;
   font-size: 17px;
 }
