--- a/packages/theme-default/src/components/Tabs/index.module.scss
+++ b/packages/theme-default/src/components/Tabs/index.module.scss
@@ -4,7 +4,7 @@
   border-radius: var(--rp-radius);
   margin: 1rem 0;
 
-  :global(div[class*='language-']) {
+  :global(div[class^='language-']) {
     margin: 0 -0.5rem;
     border-radius: 0;
     font-size: 13px;
