--- a/packages/theme-default/src/styles/vars.css
+++ b/packages/theme-default/src/styles/vars.css
@@ -100,3 +100,30 @@
   --rp-shadow-4: 0 14px 44px rgba(0, 0, 0, 0.12), 0 3px 9px rgba(0, 0, 0, 0.12);
   --rp-shadow-5: 0 18px 56px rgba(0, 0, 0, 0.16), 0 4px 12px rgba(0, 0, 0, 0.16);
 }
+
+/* HomeLayout */
+:root {
+  --rp-home-hero-name-color: transparent;
+  --rp-home-hero-name-background: -webkit-linear-gradient(
+    120deg,
+    var(--rp-c-brand) 30%,
+    #42d392
+  );
+  --rp-home-hero-image-background-image: none;
+  --rp-home-hero-image-filter: none;
+  --rp-home-feature-bg: var(--rp-c-bg-soft);
+  --rp-home-mask-background-image: conic-gradient(
+    from 180deg at 50% 50%,
+    var(--rp-c-brand) 0deg,
+    180deg,
+    #42d392 1turn
+  );
+  --rp-home-hero-image-width-sm: 250px;
+  --rp-home-hero-image-width: 375px;
+  --rp-home-hero-text-max-width: 40rem;
+}
+
+.dark {
+  --rp-home-bg: #000;
+  --rp-home-feature-bg: var(--rp-c-bg-soft);
+}
