--- a/packages/theme-default/src/components/Sidebar/index.module.scss
+++ b/packages/theme-default/src/components/Sidebar/index.module.scss
@@ -49,7 +49,8 @@
     width: var(--rp-sidebar-width);
     transform: translate3d(0, 0, 0);
     box-shadow: var(--rp-c-shadow-3);
-    mask-image: linear-gradient(transparent, #000 20px),
+    mask-image:
+      linear-gradient(transparent, #000 20px),
       linear-gradient(270deg, #000 10px, transparent 0);
     --webkit-mask-image: linear-gradient(270deg, #000 10px, transparent 0);
   }
