refactor(theme-default): refactor mediumZoom as <ImgZoom /> in getCustomMDXComponent

--- a/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
+++ b/packages/theme-default/src/layout/DocLayout/docComponents/index.module.scss
@@ -63,6 +63,11 @@
   }
 }
 
+.medium-zoom-overlay,
+.medium-zoom-image--opened {
+  z-index: 999;
+}
+
 :global(.header-anchor) {
   color: var(--rp-c-brand);
 }
